2008-02-09  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/events.c (register_event_group)
	(InitEventHandlerJumpTable, dispatch_event):
	use separate jump tables for events defined by X-extensions
	to eliminate the need to ovverride the LASTEvent value.

	* fvwm/module_list.c (module_list_remove):
	include the case where the module is first in the list in
	the loop, fixing a segmentaion fault when the list was empty.

2008-02-07  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/add_window.c (setup_frame_window):
	add CWCursor to window's valuemask (from Marc Lehmann's argb patch)
	add preliminary support for ARGB windows in fvwm (based on
	Marc Lehman's argb patch)

2008-02-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/PictureUtils.c (XPM_COLOR_CLOSENESS):
	fixed compile error

2008-02-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Colorset.c (CreateOffsetBackgroundPixmap):
	catch BadGC when updating root transparent window background

	* libs/XError.c (do_coredump):
	(ferror_set_temp_error_handler):
	(ferror_reset_error_handler)
	(ferror_call_next_error_handler):

	new helper functions
	* libs/XError.c (PrintXErrorAndCoredump):
	try to dump core the hard way

2008-02-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/colorset.c (parse_colorset):
	check for image != None before calling XDestroyImage

	* fvwm/ewmh_events.c (ewmh_WMStateMaxVert):
	(ewmh_WMStateMaxHoriz):
	(ewmh_WMStateModal):
	(ewmh_WMStateShaded):
	(ewmh_WMStateStaysOnTop):
	(ewmh_WMStateStaysOnBottom):
	handle the STATE_ADD command of the EWMH _NET_WM_STATE message from
	version 1.3
	also ignore the EWMH staysontop and staysonbottom hints if the
	EWMHIgnoreStackingOrderHints style is used

	* fvwm/colorset.c (parse_colorset):
	Fixed a sporadic crash when the root background set by gnome,
	fvwm-root, esetroot etc. changes and a root transparent colour set
	is used.

	* fvwm/colorset.c (parse_colorset):